--- a/package/crds/cloudfunctions.gcp.upbound.io_functions.yaml
+++ b/package/crds/cloudfunctions.gcp.upbound.io_functions.yaml
@@ -1434,6 +1434,10 @@ spec:
                     description: A set of key/value environment variable pairs available
                       during build time.
                     type: object
+                  buildServiceAccount:
+                    description: If provided, the self-provided service account to
+                      use to build the function. The format of this field is projects/{project}/serviceAccounts/{serviceAccountEmail}
+                    type: string
                   buildWorkerPool:
                     description: Name of the Cloud Build Custom Worker Pool that should
                       be used to build the function.
@@ -1835,6 +1839,10 @@ spec:
                     description: A set of key/value environment variable pairs available
                       during build time.
                     type: object
+                  buildServiceAccount:
+                    description: If provided, the self-provided service account to
+                      use to build the function. The format of this field is projects/{project}/serviceAccounts/{serviceAccountEmail}
+                    type: string
                   buildWorkerPool:
                     description: Name of the Cloud Build Custom Worker Pool that should
                       be used to build the function.
@@ -2394,6 +2402,10 @@ spec:
                     description: A set of key/value environment variable pairs available
                       during build time.
                     type: object
+                  buildServiceAccount:
+                    description: If provided, the self-provided service account to
+                      use to build the function. The format of this field is projects/{project}/serviceAccounts/{serviceAccountEmail}
+                    type: string
                   buildWorkerPool:
                     description: Name of the Cloud Build Custom Worker Pool that should
                       be used to build the function.
