--- a/package/crds/cloudrun.gcp.upbound.io_domainmappings.yaml
+++ b/package/crds/cloudrun.gcp.upbound.io_domainmappings.yaml
@@ -1055,8 +1055,8 @@ spec:
                           type: string
                         description: |-
                           Annotations is a key value map stored with a resource that
-                          may be set by external tools to store and retrieve arbitrary metadata. More
-                          info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
+                          may be set by external tools to store and retrieve arbitrary metadata.
+                          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
                           Note: The Cloud Run API may add additional annotations that were not provided in your config.ignore_changes rule to the metadata.0.annotations field.
                           Note: This field is non-authoritative, and will only manage the annotations present in your configuration.
                           Please refer to the field effective_annotations for all of the annotations present on the resource.
@@ -1291,8 +1291,8 @@ spec:
                           type: string
                         description: |-
                           Annotations is a key value map stored with a resource that
-                          may be set by external tools to store and retrieve arbitrary metadata. More
-                          info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
+                          may be set by external tools to store and retrieve arbitrary metadata.
+                          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
                           Note: The Cloud Run API may add additional annotations that were not provided in your config.ignore_changes rule to the metadata.0.annotations field.
                           Note: This field is non-authoritative, and will only manage the annotations present in your configuration.
                           Please refer to the field effective_annotations for all of the annotations present on the resource.
@@ -1702,8 +1702,8 @@ spec:
                           type: string
                         description: |-
                           Annotations is a key value map stored with a resource that
-                          may be set by external tools to store and retrieve arbitrary metadata. More
-                          info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
+                          may be set by external tools to store and retrieve arbitrary metadata.
+                          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
                           Note: The Cloud Run API may add additional annotations that were not provided in your config.ignore_changes rule to the metadata.0.annotations field.
                           Note: This field is non-authoritative, and will only manage the annotations present in your configuration.
                           Please refer to the field effective_annotations for all of the annotations present on the resource.
