--- a/package/crds/cloudrun.gcp.upbound.io_v2services.yaml
+++ b/package/crds/cloudrun.gcp.upbound.io_v2services.yaml
@@ -3680,8 +3680,9 @@ spec:
                         type: object
                         x-kubernetes-map-type: granular
                       maxInstanceRequestConcurrency:
-                        description: Sets the maximum number of requests that each
-                          serving instance can receive.
+                        description: |-
+                          Sets the maximum number of requests that each serving instance can receive.
+                          If not specified or 0, defaults to 80 when requested CPU >= 1 and defaults to 1 when requested CPU < 1.
                         type: number
                       revision:
                         description: The unique name for the revision. If this field
@@ -4571,8 +4572,9 @@ spec:
                         type: object
                         x-kubernetes-map-type: granular
                       maxInstanceRequestConcurrency:
-                        description: Sets the maximum number of requests that each
-                          serving instance can receive.
+                        description: |-
+                          Sets the maximum number of requests that each serving instance can receive.
+                          If not specified or 0, defaults to 80 when requested CPU >= 1 and defaults to 1 when requested CPU < 1.
                         type: number
                       revision:
                         description: The unique name for the revision. If this field
@@ -5663,8 +5665,9 @@ spec:
                         type: object
                         x-kubernetes-map-type: granular
                       maxInstanceRequestConcurrency:
-                        description: Sets the maximum number of requests that each
-                          serving instance can receive.
+                        description: |-
+                          Sets the maximum number of requests that each serving instance can receive.
+                          If not specified or 0, defaults to 80 when requested CPU >= 1 and defaults to 1 when requested CPU < 1.
                         type: number
                       revision:
                         description: The unique name for the revision. If this field
