--- a/package/crds/compute.gcp.upbound.io_serviceattachments.yaml
+++ b/package/crds/compute.gcp.upbound.io_serviceattachments.yaml
@@ -302,9 +302,8 @@ spec:
                     description: URL of the region where the resource resides.
                     type: string
                   targetService:
-                    description: |-
-                      The URL of a forwarding rule that represents the service identified by
-                      this service attachment.
+                    description: The URL of a service serving the endpoint identified
+                      by this service attachment.
                     type: string
                   targetServiceRef:
                     description: Reference to a ForwardingRule in compute to populate
@@ -624,9 +623,8 @@ spec:
                       If true, update will affect both PENDING and ACCEPTED/REJECTED PSC endpoints. For example, an ACCEPTED PSC endpoint will be moved to REJECTED if its project is added to the reject list.
                     type: boolean
                   targetService:
-                    description: |-
-                      The URL of a forwarding rule that represents the service identified by
-                      this service attachment.
+                    description: The URL of a service serving the endpoint identified
+                      by this service attachment.
                     type: string
                   targetServiceRef:
                     description: Reference to a ForwardingRule in compute to populate
@@ -992,9 +990,8 @@ spec:
                     description: The URI of the created resource.
                     type: string
                   targetService:
-                    description: |-
-                      The URL of a forwarding rule that represents the service identified by
-                      this service attachment.
+                    description: The URL of a service serving the endpoint identified
+                      by this service attachment.
                     type: string
                 type: object
               conditions:
