--- a/examples-generated/networkconnectivity/v1beta1/hub.yaml
+++ b/examples-generated/networkconnectivity/v1beta1/hub.yaml
@@ -11,5 +11,4 @@ spec:
     description: A sample hub
     labels:
       label-one: value-one
-    name: hub
-    project: my-project-name
+    name: basic
