--- a/examples-generated/networkconnectivity/v1beta2/spoke.yaml
+++ b/examples-generated/networkconnectivity/v1beta2/spoke.yaml
@@ -8,7 +8,7 @@ metadata:
   name: primary
 spec:
   forProvider:
-    description: A sample spoke with a linked routher appliance instance
+    description: A sample spoke with a linked router appliance instance
     hubSelector:
       matchLabels:
         testing.upbound.io/example-name: basic_hub
@@ -22,7 +22,7 @@ spec:
         matchLabels:
           testing.upbound.io/example-name: network
     location: global
-    name: name
+    name: spoke1
 
 ---
 
@@ -53,4 +53,4 @@ spec:
     description: A sample hub
     labels:
       label-two: value-one
-    name: hub
+    name: hub1
