--- a/package/crds/bigquery.gcp.upbound.io_datasets.yaml
+++ b/package/crds/bigquery.gcp.upbound.io_datasets.yaml
@@ -2610,6 +2610,17 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  resourceTags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      The tags attached to this table. Tag keys are globally unique. Tag key is expected to be
+                      in the namespaced format, for example "123456789012/environment" where 123456789012 is the
+                      ID of the parent organization or project resource for this tag key. Tag value is expected
+                      to be the short name, for example "Production". See Tag definitions
+                      for more details.
+                    type: object
+                    x-kubernetes-map-type: granular
                   storageBillingModel:
                     description: |-
                       Specifies the storage billing model for the dataset.
@@ -3304,6 +3315,17 @@ spec:
                     description: Defines the time travel window in hours. The value
                       can be from 48 to 168 hours (2 to 7 days).
                     type: string
+                  resourceTags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      The tags attached to this table. Tag keys are globally unique. Tag key is expected to be
+                      in the namespaced format, for example "123456789012/environment" where 123456789012 is the
+                      ID of the parent organization or project resource for this tag key. Tag value is expected
+                      to be the short name, for example "Production". See Tag definitions
+                      for more details.
+                    type: object
+                    x-kubernetes-map-type: granular
                   storageBillingModel:
                     description: |-
                       Specifies the storage billing model for the dataset.
@@ -3730,6 +3752,17 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  resourceTags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      The tags attached to this table. Tag keys are globally unique. Tag key is expected to be
+                      in the namespaced format, for example "123456789012/environment" where 123456789012 is the
+                      ID of the parent organization or project resource for this tag key. Tag value is expected
+                      to be the short name, for example "Production". See Tag definitions
+                      for more details.
+                    type: object
+                    x-kubernetes-map-type: granular
                   selfLink:
                     description: The URI of the created resource.
                     type: string
