--- a/package/crds/bigquery.gcp.upbound.io_tables.yaml
+++ b/package/crds/bigquery.gcp.upbound.io_tables.yaml
@@ -1991,6 +1991,12 @@ spec:
                 type: string
               forProvider:
                 properties:
+                  allowResourceTagsOnDeletion:
+                    description: |-
+                      If set to true, it allows table
+                      deletion when there are still resource tags attached. The default value is
+                      false.
+                    type: boolean
                   clustering:
                     description: |-
                       Specifies column names to use for data clustering.
@@ -2513,6 +2519,17 @@ spec:
                       require a partition filter that can be used for partition elimination to be
                       specified.
                     type: boolean
+                  resourceTags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      The tags attached to this table. Tag keys are
+                      globally unique. Tag key is expected to be in the namespaced format, for
+                      example "123456789012/environment" where 123456789012 is the ID of the
+                      parent organization or project resource for this tag key. Tag value is
+                      expected to be the short name, for example "Production".
+                    type: object
+                    x-kubernetes-map-type: granular
                   schema:
                     description: A JSON schema for the table.
                     type: string
@@ -2666,6 +2683,12 @@ spec:
                   for example because of an external controller is managing them, like an
                   autoscaler.
                 properties:
+                  allowResourceTagsOnDeletion:
+                    description: |-
+                      If set to true, it allows table
+                      deletion when there are still resource tags attached. The default value is
+                      false.
+                    type: boolean
                   clustering:
                     description: |-
                       Specifies column names to use for data clustering.
@@ -3104,6 +3127,17 @@ spec:
                       require a partition filter that can be used for partition elimination to be
                       specified.
                     type: boolean
+                  resourceTags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      The tags attached to this table. Tag keys are
+                      globally unique. Tag key is expected to be in the namespaced format, for
+                      example "123456789012/environment" where 123456789012 is the ID of the
+                      parent organization or project resource for this tag key. Tag value is
+                      expected to be the short name, for example "Production".
+                    type: object
+                    x-kubernetes-map-type: granular
                   schema:
                     description: A JSON schema for the table.
                     type: string
@@ -3410,6 +3444,12 @@ spec:
             properties:
               atProvider:
                 properties:
+                  allowResourceTagsOnDeletion:
+                    description: |-
+                      If set to true, it allows table
+                      deletion when there are still resource tags attached. The default value is
+                      false.
+                    type: boolean
                   clustering:
                     description: |-
                       Specifies column names to use for data clustering.
@@ -3897,6 +3937,17 @@ spec:
                       require a partition filter that can be used for partition elimination to be
                       specified.
                     type: boolean
+                  resourceTags:
+                    additionalProperties:
+                      type: string
+                    description: |-
+                      The tags attached to this table. Tag keys are
+                      globally unique. Tag key is expected to be in the namespaced format, for
+                      example "123456789012/environment" where 123456789012 is the ID of the
+                      parent organization or project resource for this tag key. Tag value is
+                      expected to be the short name, for example "Production".
+                    type: object
+                    x-kubernetes-map-type: granular
                   schema:
                     description: A JSON schema for the table.
                     type: string
