--- a/package/crds/cloudrun.gcp.upbound.io_services.yaml
+++ b/package/crds/cloudrun.gcp.upbound.io_services.yaml
@@ -2934,8 +2934,8 @@ spec:
                           type: string
                         description: |-
                           Annotations is a key value map stored with a resource that
-                          may be set by external tools to store and retrieve arbitrary metadata. More
-                          info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
+                          may be set by external tools to store and retrieve arbitrary metadata.
+                          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
                           Note: The Cloud Run API may add additional annotations that were not provided in your config.ignore_changes rule to the metadata.0.annotations field.
                           Annotations with run.googleapis.com/ and autoscaling.knative.dev are restricted. Use the following annotation
                           keys to configure features on a Revision template:
@@ -3065,8 +3065,8 @@ spec:
                               type: string
                             description: |-
                               Annotations is a key value map stored with a resource that
-                              may be set by external tools to store and retrieve arbitrary metadata. More
-                              info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
+                              may be set by external tools to store and retrieve arbitrary metadata.
+                              More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
                               Note: The Cloud Run API may add additional annotations that were not provided in your config.ignore_changes rule to the metadata.0.annotations field.
                               Annotations with run.googleapis.com/ and autoscaling.knative.dev are restricted. Use the following annotation
                               keys to configure features on a Revision template:
@@ -3097,7 +3097,8 @@ spec:
                           containerConcurrency:
                             description: |-
                               ContainerConcurrency specifies the maximum allowed in-flight (concurrent)
-                              requests per container of the Revision. Values are:
+                              requests per container of the Revision. If not specified or 0, defaults to 80 when
+                              requested CPU >= 1 and defaults to 1 when requested CPU < 1.
                             type: number
                           containers:
                             description: |-
@@ -3749,8 +3750,8 @@ spec:
                           type: string
                         description: |-
                           Annotations is a key value map stored with a resource that
-                          may be set by external tools to store and retrieve arbitrary metadata. More
-                          info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
+                          may be set by external tools to store and retrieve arbitrary metadata.
+                          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
                           Note: The Cloud Run API may add additional annotations that were not provided in your config.ignore_changes rule to the metadata.0.annotations field.
                           Annotations with run.googleapis.com/ and autoscaling.knative.dev are restricted. Use the following annotation
                           keys to configure features on a Revision template:
@@ -3880,8 +3881,8 @@ spec:
                               type: string
                             description: |-
                               Annotations is a key value map stored with a resource that
-                              may be set by external tools to store and retrieve arbitrary metadata. More
-                              info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
+                              may be set by external tools to store and retrieve arbitrary metadata.
+                              More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
                               Note: The Cloud Run API may add additional annotations that were not provided in your config.ignore_changes rule to the metadata.0.annotations field.
                               Annotations with run.googleapis.com/ and autoscaling.knative.dev are restricted. Use the following annotation
                               keys to configure features on a Revision template:
@@ -3912,7 +3913,8 @@ spec:
                           containerConcurrency:
                             description: |-
                               ContainerConcurrency specifies the maximum allowed in-flight (concurrent)
-                              requests per container of the Revision. Values are:
+                              requests per container of the Revision. If not specified or 0, defaults to 80 when
+                              requested CPU >= 1 and defaults to 1 when requested CPU < 1.
                             type: number
                           containers:
                             description: |-
@@ -4727,8 +4729,8 @@ spec:
                           type: string
                         description: |-
                           Annotations is a key value map stored with a resource that
-                          may be set by external tools to store and retrieve arbitrary metadata. More
-                          info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
+                          may be set by external tools to store and retrieve arbitrary metadata.
+                          More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
                           Note: The Cloud Run API may add additional annotations that were not provided in your config.ignore_changes rule to the metadata.0.annotations field.
                           Annotations with run.googleapis.com/ and autoscaling.knative.dev are restricted. Use the following annotation
                           keys to configure features on a Revision template:
@@ -4928,8 +4930,8 @@ spec:
                               type: string
                             description: |-
                               Annotations is a key value map stored with a resource that
-                              may be set by external tools to store and retrieve arbitrary metadata. More
-                              info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
+                              may be set by external tools to store and retrieve arbitrary metadata.
+                              More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations
                               Note: The Cloud Run API may add additional annotations that were not provided in your config.ignore_changes rule to the metadata.0.annotations field.
                               Annotations with run.googleapis.com/ and autoscaling.knative.dev are restricted. Use the following annotation
                               keys to configure features on a Revision template:
@@ -4985,7 +4987,8 @@ spec:
                           containerConcurrency:
                             description: |-
                               ContainerConcurrency specifies the maximum allowed in-flight (concurrent)
-                              requests per container of the Revision. Values are:
+                              requests per container of the Revision. If not specified or 0, defaults to 80 when
+                              requested CPU >= 1 and defaults to 1 when requested CPU < 1.
                             type: number
                           containers:
                             description: |-
