--- a/package/crds/compute.gcp.upbound.io_backendservices.yaml
+++ b/package/crds/compute.gcp.upbound.io_backendservices.yaml
@@ -3586,6 +3586,47 @@ spec:
                       load_balancing_scheme set to INTERNAL_SELF_MANAGED.
                       Structure is documented below.
                     properties:
+                      awsV4Authentication:
+                        description: |-
+                          The configuration needed to generate a signature for access to private storage buckets that support AWS's Signature Version 4 for authentication.
+                          Allowed only for INTERNET_IP_PORT and INTERNET_FQDN_PORT NEG backends.
+                          Structure is documented below.
+                        properties:
+                          accessKeyId:
+                            description: The identifier of an access key used for
+                              s3 bucket authentication.
+                            type: string
+                          accessKeySecretRef:
+                            description: |-
+                              The access key used for s3 bucket authentication.
+                              Required for updating or creating a backend that uses AWS v4 signature authentication, but will not be returned as part of the configuration when queried with a REST API GET request.
+                              Note: This property is sensitive and will not be displayed in the plan.
+                            properties:
+                              key:
+                                description: The key to select.
+                                type: string
+                              name:
+                                description: Name of the secret.
+                                type: string
+                              namespace:
+                                description: Namespace of the secret.
+                                type: string
+                            required:
+                            - key
+                            - name
+                            - namespace
+                            type: object
+                          accessKeyVersion:
+                            description: The optional version identifier for the access
+                              key. You can use this to keep track of different iterations
+                              of your access key.
+                            type: string
+                          originRegion:
+                            description: |-
+                              The name of the cloud region of your origin. This is a free-form field with the name of the region your cloud uses to host your origin.
+                              For example, "us-east-1" for AWS or "us-ashburn-1" for OCI.
+                            type: string
+                        type: object
                       clientTlsPolicy:
                         description: |-
                           ClientTlsPolicy is a resource that specifies how a client should authenticate
@@ -4441,6 +4482,47 @@ spec:
                       load_balancing_scheme set to INTERNAL_SELF_MANAGED.
                       Structure is documented below.
                     properties:
+                      awsV4Authentication:
+                        description: |-
+                          The configuration needed to generate a signature for access to private storage buckets that support AWS's Signature Version 4 for authentication.
+                          Allowed only for INTERNET_IP_PORT and INTERNET_FQDN_PORT NEG backends.
+                          Structure is documented below.
+                        properties:
+                          accessKeyId:
+                            description: The identifier of an access key used for
+                              s3 bucket authentication.
+                            type: string
+                          accessKeySecretRef:
+                            description: |-
+                              The access key used for s3 bucket authentication.
+                              Required for updating or creating a backend that uses AWS v4 signature authentication, but will not be returned as part of the configuration when queried with a REST API GET request.
+                              Note: This property is sensitive and will not be displayed in the plan.
+                            properties:
+                              key:
+                                description: The key to select.
+                                type: string
+                              name:
+                                description: Name of the secret.
+                                type: string
+                              namespace:
+                                description: Namespace of the secret.
+                                type: string
+                            required:
+                            - key
+                            - name
+                            - namespace
+                            type: object
+                          accessKeyVersion:
+                            description: The optional version identifier for the access
+                              key. You can use this to keep track of different iterations
+                              of your access key.
+                            type: string
+                          originRegion:
+                            description: |-
+                              The name of the cloud region of your origin. This is a free-form field with the name of the region your cloud uses to host your origin.
+                              For example, "us-east-1" for AWS or "us-ashburn-1" for OCI.
+                            type: string
+                        type: object
                       clientTlsPolicy:
                         description: |-
                           ClientTlsPolicy is a resource that specifies how a client should authenticate
@@ -5294,6 +5376,27 @@ spec:
                       load_balancing_scheme set to INTERNAL_SELF_MANAGED.
                       Structure is documented below.
                     properties:
+                      awsV4Authentication:
+                        description: |-
+                          The configuration needed to generate a signature for access to private storage buckets that support AWS's Signature Version 4 for authentication.
+                          Allowed only for INTERNET_IP_PORT and INTERNET_FQDN_PORT NEG backends.
+                          Structure is documented below.
+                        properties:
+                          accessKeyId:
+                            description: The identifier of an access key used for
+                              s3 bucket authentication.
+                            type: string
+                          accessKeyVersion:
+                            description: The optional version identifier for the access
+                              key. You can use this to keep track of different iterations
+                              of your access key.
+                            type: string
+                          originRegion:
+                            description: |-
+                              The name of the cloud region of your origin. This is a free-form field with the name of the region your cloud uses to host your origin.
+                              For example, "us-east-1" for AWS or "us-ashburn-1" for OCI.
+                            type: string
+                        type: object
                       clientTlsPolicy:
                         description: |-
                           ClientTlsPolicy is a resource that specifies how a client should authenticate
