--- a/package/crds/networkconnectivity.gcp.upbound.io_hubs.yaml
+++ b/package/crds/networkconnectivity.gcp.upbound.io_hubs.yaml
@@ -79,8 +79,10 @@ spec:
                   labels:
                     additionalProperties:
                       type: string
-                    description: Optional labels in key:value format. For more information
-                      about labels, see Requirements for labels.
+                    description: |-
+                      Optional labels in key:value format. For more information about labels, see Requirements for labels.
+                      Note: This field is non-authoritative, and will only manage the labels present in your configuration.
+                      Please refer to the field effective_labels for all of the labels present on the resource.
                     type: object
                     x-kubernetes-map-type: granular
                   name:
@@ -88,7 +90,9 @@ spec:
                       unique. They use the following form: projects/{project_number}/locations/global/hubs/{hub_id}'
                     type: string
                   project:
-                    description: The project for the resource
+                    description: |-
+                      The ID of the project in which the resource belongs.
+                      If it is not provided, the provider project is used.
                     type: string
                 type: object
               initProvider:
@@ -110,8 +114,10 @@ spec:
                   labels:
                     additionalProperties:
                       type: string
-                    description: Optional labels in key:value format. For more information
-                      about labels, see Requirements for labels.
+                    description: |-
+                      Optional labels in key:value format. For more information about labels, see Requirements for labels.
+                      Note: This field is non-authoritative, and will only manage the labels present in your configuration.
+                      Please refer to the field effective_labels for all of the labels present on the resource.
                     type: object
                     x-kubernetes-map-type: granular
                   name:
@@ -119,7 +125,9 @@ spec:
                       unique. They use the following form: projects/{project_number}/locations/global/hubs/{hub_id}'
                     type: string
                   project:
-                    description: The project for the resource
+                    description: |-
+                      The ID of the project in which the resource belongs.
+                      If it is not provided, the provider project is used.
                     type: string
                 type: object
               managementPolicies:
@@ -289,11 +297,6 @@ spec:
             required:
             - forProvider
             type: object
-            x-kubernetes-validations:
-            - message: spec.forProvider.name is a required parameter
-              rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
-                || ''Update'' in self.managementPolicies) || has(self.forProvider.name)
-                || (has(self.initProvider) && has(self.initProvider.name))'
           status:
             description: HubStatus defines the observed state of Hub.
             properties:
@@ -316,8 +319,10 @@ spec:
                   labels:
                     additionalProperties:
                       type: string
-                    description: Optional labels in key:value format. For more information
-                      about labels, see Requirements for labels.
+                    description: |-
+                      Optional labels in key:value format. For more information about labels, see Requirements for labels.
+                      Note: This field is non-authoritative, and will only manage the labels present in your configuration.
+                      Please refer to the field effective_labels for all of the labels present on the resource.
                     type: object
                     x-kubernetes-map-type: granular
                   name:
@@ -325,30 +330,31 @@ spec:
                       unique. They use the following form: projects/{project_number}/locations/global/hubs/{hub_id}'
                     type: string
                   project:
-                    description: The project for the resource
+                    description: |-
+                      The ID of the project in which the resource belongs.
+                      If it is not provided, the provider project is used.
                     type: string
                   routingVpcs:
-                    description: The VPC network associated with this hub's spokes.
-                      All of the VPN tunnels, VLAN attachments, and router appliance
-                      instances referenced by this hub's spokes must belong to this
-                      VPC network. This field is read-only. Network Connectivity Center
-                      automatically populates it based on the set of spokes attached
-                      to the hub.
+                    description: |-
+                      The VPC network associated with this hub's spokes. All of the VPN tunnels, VLAN attachments, and router appliance instances referenced by this hub's spokes must belong to this VPC network. This field is read-only. Network Connectivity Center automatically populates it based on the set of spokes attached to the hub.
+                      Structure is documented below.
                     items:
                       properties:
                         uri:
+                          description: The URI of the VPC network.
                           type: string
                       type: object
                     type: array
                   state:
-                    description: 'Output only. The current lifecycle state of this
-                      hub. Possible values: STATE_UNSPECIFIED, CREATING, ACTIVE, DELETING'
+                    description: Output only. The current lifecycle state of this
+                      hub.
                     type: string
                   terraformLabels:
                     additionalProperties:
                       type: string
-                    description: The combination of labels configured directly on
-                      the resource and default labels configured on the provider.
+                    description: |-
+                      The combination of labels configured directly on the resource
+                      and default labels configured on the provider.
                     type: object
                     x-kubernetes-map-type: granular
                   uniqueId:
